name:     stimpak
version:  0.1.0
category: FRP
synopsis: Functional reactive programming library

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/stimpak
bug-reports:  https://github.com/esoeylemez/stimpak/issues
license:      BSD3
license-file: LICENSE

description: Functional reactive programming library.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/stimpak.git

flag Examples
    default: False
    description: Build the example programs
    manual: True


library
    build-depends:
        base >= 4.8 && < 4.10,
        dependent-sum == 0.3.*,
        kan-extensions == 5.0.*,
        semigroupoids >= 5.0 && < 5.2,
        stm == 2.4.*,
        these == 0.7.*
    default-language: Haskell2010
    ghc-options: -W
    hs-source-dirs: src
    exposed-modules:
        Stimpak.Internal.Core

-- executable stimpak-experiment
--     if flag(examples)
--         build-depends:
--             base >= 4.8 && < 4.10,
--             stimpak
--     else
--         buildable: False
--     default-language: Haskell2010
--     ghc-options: -W -threaded
--     hs-source-dirs: examples
--     main-is: experiment.hs

-- test-suite tests
--     type: exitcode-stdio-1.0
--     build-depends:
--         base >= 4.8 && < 4.10,
--         QuickCheck,
--         tasty,
--         tasty-quickcheck,
--         stimpak
--     default-language: Haskell2010
--     ghc-options: -W -threaded -with-rtsopts=-N
--     hs-source-dirs: tests
--     main-is: Props.hs
